<resources>
    <string name="app_name">Harbinger</string>
    <string name="login">Login</string>
    <string name="welcome_message">Welcome to harbinger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user">New user?</string>
    <string name="register">Register</string>
    <string name="register_message">Create new account</string>
    <string name="have_account">Do you have an account ?</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="send_email">Send email</string>
    <string name="password_reset_info">Please enter the email address to be used for password reset.</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="new_project">New project</string>
    <string name="new_project_message">Create and manage a new project</string>
    <string name="my_projects">My projects</string>
    <string name="add_new_project">Add a new project</string>
    <string name="project_name">Project name</string>
    <string name="start_date">Project start date</string>
    <string name="end_date">Project end date</string>
    <string name="project_desc">Project description</string>
    <string name="add_project">Add project</string>
    <string name="remaining_days">%1$d days remaining</string>
    <string name="choose_action">Choose action</string>
    <string name="detail_project">Show project detail</string>
    <string name="delete_project">Delete this project</string>
    <string name="alert_session_title">Your current session has expired</string>
    <string name="alert_session_msg">Please login again</string>
    <string name="my_connected_projects">My connected projects</string>
    <string name="connect_project">Connect to project</string>
    <string name="try_again">Try again</string>
    <string name="connection_error">Please check your internet connection !</string>
    <string name="nu_user_error">No such user found !</string>
    <string name="wrong_pass_error">Wrong password !</string>
    <string name="unexpected_error">An unexpected error has occurred !</string>
    <string name="check_pass_length">your password cannot be less than 6 characters !</string>
    <string name="check_email">Email field cannot be empty !</string>
    <string name="check_email_validate">Enter a valid email address</string>
    <string name="check_pass">Password field cannot be empty !</string>
    <string name="check_name">Name field cannot be empty !</string>
    <string name="user_not_found">User not found !</string>
    <string name="incorrect_pass">Incorrect password !</string>
    <string name="server_error">Server error !</string>
    <string name="user_already_exists">User already exists !</string>
    <string name="fill_all_fields">Please fill in all fields !</string>
    <string name="my_projects_error">Projects failed to load !</string>
    <string name="connected_projects_error">Connected projects failed to load !</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="project_detail">Project detail</string>
    <string name="save">Save</string>
    <string name="edit_project">Edit Project</string>
    <string name="success">Success</string>
    <string name="invalid_date_error">Please enter a valid date !</string>
    <string name="project_tasks">Project tasks</string>
    <string name="remaining_task">Remaining task</string>
    <string name="remaining_day">Remaining day</string>
    <string name="profile_information">Profile information</string>
    <string name="settings_others">Settings &amp; Others></string>
    <string name="about">About</string>
    <string name="change_password">Change password</string>
    <string name="settings">Settings</string>
    <string name="select_photo">Select photo</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_photo">Delete photo</string>

    <!--other keys-->
    <string name="empty" translatable="false">-</string>

    <!-- Description -->
    <string name="desc_pass" translatable="false">desc_pass</string>
    <string name="desc_add_icon" translatable="false">desc_add_icon</string>
    <string name="desc_ic_err" translatable="false">desc_ic_err </string>
    <string name="desc_priority" translatable="false">desc_priority </string>

</resources>