<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.dashboard.profile.ProfileFragment">

            <com.sn.harbinger.util.uicomponents.PageHeader
                android:id="@+id/ch_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textColor="@color/main_text_color"
                app:titleText="Profile &amp; Settings " />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_header" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/dosis_medium"
                android:gravity="center_vertical"
                android:text="@string/profile_information"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/pv_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_info_title"
                app:leftIcon="@drawable/ic_mail"
                app:title="@string/empty" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/pv_created_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pv_mail"
                app:leftIcon="@drawable/ic_start_date"
                app:title="@string/empty" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/dosis_medium"
                android:gravity="center_vertical"
                android:text="@string/settings_others"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pv_created_date" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/pv_change_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_title"
                app:leftIcon="@drawable/ic_settings"
                app:rightIcon="@drawable/ic_arrow_right"
                app:title="@string/settings" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/pv_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pv_change_settings"
                app:leftIcon="@drawable/ic_pass"
                app:rightIcon="@drawable/ic_arrow_right"
                app:title="@string/change_password" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/pv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pv_change_pass"
                app:leftIcon="@drawable/ic_info"
                app:rightIcon="@drawable/ic_arrow_right"
                app:title="@string/about" />

            <com.sn.harbinger.util.uicomponents.ProfileInfoView
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pv_about"
                app:leftIcon="@drawable/ic_logout"
                app:textAllCaps="false"
                app:tintColor="@color/error_color"
                app:title="@string/logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>