<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="project"
            type="com.sn.harbinger.data.model.Project" />

        <variable
            name="vm"
            type="com.sn.harbinger.ui.dashboard.home.project.details.ProjectDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="30dp">

            <com.sn.harbinger.util.uicomponents.PageHeader
                android:id="@+id/ch_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textColor="@color/main_text_color"
                app:titleText="@string/project_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_edit"
                android:drawablePadding="8dp"
                android:drawableTint="@color/main_color"
                android:fontFamily="@font/dosis_medium"
                android:text="@string/edit_project"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_header" />


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btn_save_project"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_project_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:enabled="@{vm.isEnabled}"
                    android:hint="@string/project_name"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/main_color"
                    app:hintTextColor="@color/main_color"
                    app:startIconDrawable="@drawable/ic_project">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/dosis_medium"
                        android:inputType="textCapSentences"
                        android:text="@{project.projectName}"
                        android:textColor="@color/edit_text_selector"
                        android:textCursorDrawable="@drawable/custom_cursor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_project_desc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:enabled="@{vm.isEnabled}"
                    android:hint="@string/project_desc"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/main_color"
                    app:hintTextColor="@color/main_color"
                    app:startIconDrawable="@drawable/ic_project">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_project_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/dosis_medium"
                        android:inputType="text"
                        android:text="@{project.projectDesc}"
                        android:textColor="@color/edit_text_selector"
                        android:textCursorDrawable="@drawable/custom_cursor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_start_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:enabled="false"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/main_color"
                    app:hintTextColor="@color/main_color"
                    app:startIconDrawable="@drawable/ic_start_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/dosis_medium"
                        android:hint="@string/start_date"
                        android:text="@{project.startDate}"
                        android:textColor="@color/edit_text_selector"
                        app:helperTextHighlightedColor="@color/main_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_end_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:enabled="@{vm.isEnabled}"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/main_color"
                    app:hintTextColor="@color/main_color"
                    app:startIconDrawable="@drawable/ic_end_date">

                    <com.msa.dateedittext.DateEditText
                        android:id="@+id/det_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/dosis_medium"
                        android:hint="@string/end_date"
                        android:text="@{project.endDate}"
                        android:textColor="@color/edit_text_selector"
                        app:autoCorrect="false"
                        app:helperTextEnabled="false"
                        app:helperTextHighlightedColor="@color/main_color" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="15dp"
                android:enabled="@{vm.isEnabled}"
                android:fontFamily="@font/dosis_medium"
                android:padding="15dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:initialCornerAngle="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:textAllCaps="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>